# MJO-dip-pin-prj-adv-ocrroo-2025

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml
api/: library_basics.py  performance_tasks.md  simple_api.py
bookmark-utils/: __init__.py  bookmark_manager.py
bookmark-utils/models/: bookmark.py
design/: persona + user stuff.md
docs/templates/: issue-template.md
front-end/: app.py
front-end/bookmark_utils/: __init__.py  bookmark_manager.py
front-end/bookmark_utils/resources/: bookmarks.db
front-end/templates/: index.html  video.html
front_end/: app.py
front_end/bookmark_utils/: __init__.py  bookmark_manager.py
front_end/bookmark_utils/resources/: bookmarks.db
preliminary/: library_basics.py  performance_tasks.md  simple_api.py
