[project]
name = "ocrroo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.3.0",
    "fastapi[standard]>=0.120.1",
    "flask>=3.1.2",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pylint>=4.0.2",
]
